app/assets/stylesheets/forwind.css
/* ... */
#footer-subscribe {
  width: 242px;
  height:210px;
  padding: 0 0 0px 0px;
  float: left;
}

.footerLinks {
  width: 242px;
  height: 210px;
  margin:12px 16px 4px 0px;
  padding: 0px;
  float:left;
  list-style: None;
  font-style:italic;
}


#legal-notice {
  color:#787d7f ;
  margin:auto;
  width:150px;
  padding:20px 0px 20px 0px;
  text-align:center;
}

p.copyright {
  font-size: .875em;
}


/*----------------Home page--------------------------------------*/

#home_promo_header{
  width: 758px;
  float: left;
  font-size: .875em;
  padding: 0 0 8px 0px;
}

.home-promo-boxgrid {
  width: 242px;
  height: 242px;
  margin:12px 16px 4px 0px;
  padding: 0px;
  float:left;
  overflow: hidden;
  position: relative;
}



.home-promo-boxgrid img{
  position: absolute;
  top: 0px;
  left: 0px;
  border: 0;
  margin:0px;
  padding: 0px;
}


.captionfull .boxcaption {
  float: left;
  position: absolute;
  background: #2f2d2e;
  height: 122px;
  width: 100%;
  margin:0px 0px 0px 0px;
  padding: 0px;
  opacity: .9;
  /* For IE 5-7 */
  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=80);
  /* For IE 8 */
  -MS-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
}


#container_2grid_left  .boxcaption h2 {
  padding: 8px 0px 8px 10px;
  margin: 0px 0px 0px 0px;
  font-weight:normal;
  font-size: .875em;
  line-height:1;
}



#container_2grid_left .boxcaption p {
  margin: 0px 0px 0px 10px;
  padding: 0px 0px 0px 0px;
  line-height:1.4;
}


.captionfull .boxcaption {
  top: 242px;
  left: 0;
}
.caption .boxcaption {
  top: 242px;
  left: 0;
}



/*----------------Home page Side Bar--------------------------------------*/

aside {
  width: 242px;
  float: left;
}



#home_podcast_promo {
  width: 258px;
  height: 162px;
  padding: 0 0 10px 0px;
}


#home_podcast_promo h2 {
  margin-left: 0px;
  color:#fff;
  font-weight:normal;
  font-size: .875em;
  text-transform: uppercase;
  line-height:2;
}


#home_podcast_promo p {
  font-size: .875em;
  padding: 0px 10px 10px 10px;
}


.home-podcast-boxgrid {
  width: 242px;
  height: 121px;
  margin:12px 0 4px 0px;
  padding: 0px;
  float:left;
  overflow: hidden;
  position: relative;
}


.home-podcast-boxgrid img{
  position: absolute;
  top: 0px;
  left: 0px;
  border: 0;
  margin:0px;
  padding: 0px;
}


.podcast-boxcaption {
  float: left;
  position: absolute;
  background: #2f2d2e;
  height: 122px;
  width: 100%;
  opacity: .9;
  /* For IE 5-7 */
  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=80);
  /* For IE 8 */
  -MS-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
}


.podcast-boxcaption h2 {
  padding: 0px 0px 0px 10px;
  font-weight:normal;
  font-size: .875em;
  text-transform: uppercase;
  line-height:2;
}

.podcast-captionfull .podcast-boxcaption {
  top: 121px;
  left: 0;
}

.podcast-caption .podcast-boxcaption {
  top: 121;
  left: 0;
}


.podcast-cover {

background:url(/images/index/podcast-promo-bg.jpg) 0 0 no-repeat;
  }

#home_blogroll {
  width: 258px;
  height: 360px;
  padding: 0 0 10px 0px;
}

.home-blogroll-post {
    width: 237px;
    margin:12px 0 22px 0px;
    padding: 0px 5px 0px 0px;
    text-align: justify;
}

#home_blogroll h2 {
    margin-left: 0px;
    color:#fff;
    font-weight:normal;
    font-size: .875em;
    text-transform: uppercase;
    line-height:2;
}

#home_blogroll h3 {
    margin: 0px 0px 0px 0px;
    padding: 0px 0px 2px 0px;
    color:#648d9f;
    font-weight:normal;
    font-size: .875em;
    text-transform: uppercase;
}

#home_blogroll p {
  font-size: .875em;
  padding: 0px 0px 0px 0px;
  margin: 0px 0px 6px 0px;
  color: #b9bcbe;
}

#home_blogroll .date {
  color:#787d7f;
  font-size: .875em;
  padding: 0px 0px 0px 0px;
  margin: 0px 0px 6px 0px;
}


.home-blogroll-post a:hover {
  color:#648D9F;
  text-decoration: underline;
}



/*------------------Releases Index------------------------*/



.release_index_promo{
  width: 242px;
  height: 368px;
  float: left;
  padding: 0 16px 25px 0px;
}

.release_index_promo p{
  color: #ffffff;
  font-size: .875em;
  text-align: justify;
  color: #b9bcbe;
}

.release_index_promo h2{
  padding: 0px 0px 0px 0px;
  font-weight:normal;
  text-transform: uppercase;
  font-size: .875em;
  line-height:2;
}

.release_index_promo img{
  width: 242px;
  height: 242px;
  margin: 0 0 0 0;
  padding: 0 0 5px 0;
}


/*release container ----------------------------------------*/

#release_container
{
  margin:0 0 0 0;
  padding: 0 0 0 20px;
  list-style:none;
  color: #fff;
  width: 780px;
  font-size: 0.8125em;
}

#release_container ol{
  padding: 0 0 0 0;
  list-style:none;
  margin: 0 0 0 0;
}

#release_container li
{
  margin:0 0 4px 0;
  overflow:hidden;
  padding:0;
  margin:0;
}

#release_container li dl, #release_container li dt
{
  margin: 0;
  padding: 0;
}


#release_container li dt {
  float:left;
}

#release_container li dl dt p {
  width: 200px;
  padding:0;
  margin: 0;
  text-align: left;
  float: right;
}


#release_container li dd span {
  float:left;
}

#release_container li dt span {
  color: #b9bcbe;
  display:block;
  float:left;
  width:171px;
}

#release_container li dt strong {
  display:block;
  float: right;
  width: 150px;
}

#release_container img {display:block;margin:0 20px 0 0;float:left;}
#release_container li {display:block;margin:0 0 0.72em 20px;}

#release_container ul {
  padding: 20px 0 20px 0;
}

#release_container ul li dl dt span{
  color: #b9bcbe;
  display:block;
  float:left;
  width:20px;
}

#release_container ul dd{
  color: #b9bcbe;
  float:left;
  width:151px;
}

#release_container ul dL{
  color: #b9bcbe;
}

#release_container iframe {
  float: left;
}

/*form description --------------------*/


#new_release_details{
  margin:0 0 0 0;
  padding: 30px 0 20px 20px;
  list-style: none;
  color: #fff;
  width: 750px;
  color: #b9bcbe;
}
/* ... */

